force-app/main/default/objects/Transaction_Condition_Reference__c/Transaction_Condition_Reference__c.object-meta.xml
<CustomObject>
    <label>Transaction Condition Reference</label>
    <nameField>
        <displayFormat>TCR-{0000}</displayFormat>
        <label>Transaction Condition Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Condition References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>