force-app/main/default/objects/Transaction_Condition_Reference__c/fields/AssignedToRole__c.field-meta.xml
<CustomField>
    <fullName>AssignedToRole__c</fullName>
    <label>Assigned To Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Closer</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>