force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Borrower_Label__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Label__c</fullName>
    <label>Borrower Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>