force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Condition_Category__c.field-meta.xml
<CustomField>
    <fullName>Condition_Category__c</fullName>
    <label>Condition Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Disclosure</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>Payoff Demand</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>HOI</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Income/Employment</fullName>
            </value>
            <value>
                <fullName>Liabilities</fullName>
            </value>
            <value>
                <fullName>LOX</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>No Category</fullName>
            </value>
            <value>
                <fullName>Post Closing</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>WVOE</fullName>
            </value>
            <value>
                <fullName>EMD</fullName>
            </value>
            <value>
                <fullName>LOE</fullName>
            </value>
            <value>
                <fullName>Disclosures</fullName>
            </value>
            <value>
                <fullName>VOM</fullName>
            </value>
            <value>
                <fullName>VOR</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Do Not Use</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>