force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Condition_Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Condition_Group_Key__c</fullName>
    <label>Condition Group Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Senior Underwriter (PTD)</fullName>
            </value>
            <value>
                <fullName>Underwriter II (PTD)</fullName>
            </value>
            <value>
                <fullName>Project Review (PTD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>