force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Condition_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Condition_Sub_Category__c</fullName>
    <label>Condition Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Time Home Buyer Counseling</fullName>
            </value>
            <value>
                <fullName>4506-T</fullName>
            </value>
            <value>
                <fullName>Ability to Use Business Assets</fullName>
            </value>
            <value>
                <fullName>Additional Statements</fullName>
            </value>
            <value>
                <fullName>Agent Commission Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>