force-app/main/default/objects/Transaction_Condition_Reference__c/fields/IsCleared__c.field-meta.xml
<CustomField>
    <fullName>IsCleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cleared</label>
    <type>Checkbox</type>
</CustomField>