force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>HELOAN</fullName>
            </value>
            <value>
                <fullName>JUMBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>