force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>