force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Satisfied_by_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_by_Case_Type__c</fullName>
    <label>Satisfied by Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOI</fullName>
            </value>
            <value>
                <fullName>Payoff</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Appraisal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>