force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Self_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Self_Employment_Type__c</fullName>
    <label>Self Employment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>