force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Term_Description__c.field-meta.xml
<CustomField>
    <fullName>Term_Description__c</fullName>
    <label>Term Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>