force-app/main/default/objects/Transaction_Condition_Reference__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Officer</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Initial Submission</fullName>
            </value>
            <value>
                <fullName>Initial Submission Optional</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Vendor Standard</fullName>
            </value>
            <value>
                <fullName>Post Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>